--- a/Eshop-HoangAnhHuy/Views/Shared/_Header.cshtml
+++ b/Eshop-HoangAnhHuy/Views/Shared/_Header.cshtml
@@ -17,6 +17,7 @@
                 else
                 {
                     <a asp-controller="Accounts" asp-action="Login">Log In</a>
+                    <a href="#">content</a>
                 }
             }
         </p>
